src/test/deca/context/invalid/testTypeVoidParam.deca
// Description : type void pour un paramètre de méthode
class A {
    int a;
    int increment(void number) {
        a = a + number;
    }
}
